--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 
         </div>
         <div class="col-sm-6" >
-            <h1 class="main-h1">Imbue Spark is a cloud-based Product Review Platform</h1>
+            <h1 class="main-h1" style='text-align:center;'>Imbue Spark is a cloud-based Product Review Platform</h1>
         </div>
         <div class="col-sm-3" >
 
