--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -114,7 +114,7 @@
             padding:25px;
             border-radius:5px;
               box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-            max-width:350px;
+           /* max-width:350px;*/
             margin-left:15px;
         }
         .entry {
