--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
         <a href="javascript:getQuery();" class="btn btn-primary" style="width:100%;background-color:#0CB863;border:0px;">Search Product</a>
         <br>
         <br>
-        <a href="/" id="querySubmit" class="btn btn-primary" style="width:100%;">Submit</a>
+       <!-- <a href="/" id="querySubmit" class="btn btn-primary" style="width:100%;">Submit</a> -->
         <br>
         <br>
         <p class="tutorial">To search a product review, type in email address, and product name then press "Search Product". If successful, press Submit</p>
