--- a/views/index.ejs
+++ b/views/index.ejs
@@ -147,7 +147,7 @@
             var full="/query?txtQuery=" + query +"&email="+emailSearch;
             //alert(full);
             var querySubmit = document.getElementById('querySubmit');
-            querySubmit.setAttribute("href", full);
+            //querySubmit.setAttribute("href", full);
             window.location = full;
             //window.open('/email', '_self');
            
