--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,8 +143,9 @@
         function getQuery() {
             var query = document.getElementById('txtQuery').value;
             
-            var emailSearch = document.getElementById('enter').value;
-            var full="/query?txtQuery=" + query +"&email="+emailSearch;
+            //var emailSearch = document.getElementById('enter').value;
+            //var full="/query?txtQuery=" + query +"&email="+emailSearch;
+            var full="/query?txtQuery=" + query;
             //alert(full);
             var querySubmit = document.getElementById('querySubmit');
             //querySubmit.setAttribute("href", full);
