--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,9 +24,9 @@
     </div>
     <div class="col-sm-8 query-form">
         <h2 style="text-align:center;font-weight:700;">Search Product</h2>
-        <br>
-        <input class="form-control" id="enter" name="enter" type="email" placeholder="Enter E-mail Address" value="">
-        <br>
+        <!--<br><br>-->
+        <!-- <input class="form-control" id="enter" name="enter" type="email" placeholder="Enter E-mail Address" value=""> -->
+        
         <input class="form-control" type="text" id="txtQuery" name="txtQuery" placeholder="Enter Product Name"value="">
         <br>
         <a href="javascript:getQuery();" class="btn btn-primary" style="width:100%;background-color:#0CB863;border:0px;">Search Product</a>
